apps/generic/overlays/lazylibrarian/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lazylibrarian
spec:
  template:
    spec:
      containers:
        - name: container
          image: docker.io/linuxserver/lazylibrarian:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: yasr-volume
              mountPath: /config
              subPath: configs/lazylibrarian/
            - name: main-volume
              mountPath: /books
              subPath: public/Books/
            - name: yasr-volume
              mountPath: /downloads
              subPath: configs/transmission/books/
          ports:
            - name: http
              $patch: delete
            - name: http
              containerPort: 5299
              protocol: TCP
