apps/generic/overlays/lazylibrarian/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lazylibrarian
  annotations:
    forecastle.stakater.com/appName: "LazyLibrarian"
    forecastle.stakater.com/group: "Media"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: ""
